--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         /* --- المتغيرات العامة (تصميم فاخر) --- */
         :root {
             /* الوضع الفاتح */
-            --bg-color: #fdfdfd;
+            --bg-color: #f8f9fa;
             --header-bg: rgba(255, 255, 255, 0.7);
             --card-bg: #ffffff;
             --text-color: #212529;
@@ -24,7 +24,7 @@
             --accent-gradient: linear-gradient(45deg, #0d6efd, #0dcaf0);
             --footer-bg: #212529;
             --shadow: 0 8px 24px rgba(13, 110, 253, 0.1);
-            --shadow-hover: 0 12px 32px rgba(13, 110, 253, 0.15);
+            --shadow-hover: 0 12px 32px rgba(13, 110, 253, 0.2);
         }
 
         body.dark-mode {
@@ -76,7 +76,7 @@
         }
         .header-content { display: flex; justify-content: space-between; align-items: center; }
         .logo-container { display: flex; align-items: center; gap: 12px; text-decoration: none; }
-        .logo-container img { height: 50px; width: 50px; }
+        .logo-container img { height: 50px; width: 50px; border-radius: 8px; }
         .logo-container h1 { font-size: 1.8rem; color: var(--heading-color); }
         .nav-controls { display: flex; align-items: center; gap: 20px; }
         
@@ -119,7 +119,7 @@
         }
         .cta-button:hover { transform: translateY(-3px); box-shadow: 0 8px 25px rgba(0,0,0,0.3); }
 
-        /* --- قسم الميزات (Why Choose Us) --- */
+        /* --- قسم الميزات --- */
         .features { background-color: var(--card-bg); }
         .features-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 40px; text-align: center; }
         .feature-item { padding: 20px; }
@@ -128,7 +128,7 @@
         .feature-item p { opacity: 0.8; }
 
         /* --- قسم المنتجات --- */
-        .products-container { display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 40px; }
+        .products-container { display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 40px; }
         .product-card {
             background-color: var(--card-bg);
             border-radius: 16px;
@@ -140,8 +140,8 @@
             text-align: center;
         }
         .product-card:hover { transform: translateY(-10px); box-shadow: var(--shadow-hover); }
-        .product-image-container { position: relative; overflow: hidden; }
-        .product-card img { width: 100%; height: 280px; object-fit: cover; transition: transform 0.4s; }
+        .product-image-container { position: relative; overflow: hidden; background-color: #fff; }
+        .product-card img { width: 100%; height: 280px; object-fit: contain; transition: transform 0.4s; padding: 10px; }
         .product-card:hover img { transform: scale(1.05); }
         .product-info { padding: 25px; flex-grow: 1; display: flex; flex-direction: column; }
         .product-info h3 { font-size: 1.6rem; font-weight: 700; margin-bottom: 15px; color: var(--heading-color); }
@@ -204,6 +204,7 @@
 
         /* --- التجاوب مع الشاشات الصغيرة --- */
         @media (max-width: 768px) {
+            section { padding: 60px 0; }
             .nav-menu {
                 display: none; flex-direction: column; position: absolute;
                 top: 82px; right: 0; width: 100%;
@@ -219,6 +220,15 @@
             .contact-details { order: 2; }
             .qr-code-container { order: 1; }
         }
+        
+        @media (max-width: 480px) {
+            .hero h2 { font-size: 2.2rem; }
+            .hero p { font-size: 1.1rem; }
+            .container { width: 95%; }
+            .section-title { font-size: 1.8rem; }
+            .product-info h3 { font-size: 1.4rem; }
+        }
+
         @keyframes slideDown { from { opacity: 0; transform: translateY(-10px); } to { opacity: 1; transform: translateY(0); } }
 
     </style>
@@ -228,7 +238,7 @@
     <header>
         <div class="container header-content">
             <a href="#" class="logo-container">
-                <img src="PIC/LOGO.jpg" alt="شعار أمير الشروق" onerror="this.style.display='none'">
+                <img src="PIC/LOGO.jpg" alt="شعار أمير الشروق">
                 <h1>أمير الشروق</h1>
             </a>
             <nav id="navbar">
@@ -293,12 +303,12 @@
                     <div class="contact-details reveal">
                         <p><i class="fas fa-map-marker-alt"></i> <strong>العنوان:</strong> الطارف، الجزائر</p>
                         <p><i class="fas fa-phone"></i> <strong>الهاتف:</strong> <a href="tel:+213781465477">0781465477</a> | <a href="tel:+213557754808">0557754808</a></p>
-                        <p><i class="fab fa-whatsapp"></i> <strong>واتساب:</strong> <a href="https://wa.me/213781465477" target="_blank">اضغط هنا للمحادثة</a></p>
+                        <p><i class="fab fa-whatsapp"></i> <strong>واتساب:</strong> <a href="https://wa.me/213781465477" target="_blank" rel="noopener noreferrer">اضغط هنا للمحادثة</a></p>
                         <p><i class="fas fa-envelope"></i> <strong>البريد:</strong> <a href="mailto:amirchourouk363636@gmail.com">amirchourouk363636@gmail.com</a></p>
                     </div>
                     <div class="qr-code-container reveal">
-                        <h3>أو امسح الرمز للتواصل السريع</h3>
-                        <img src="PIC/QR_Code.png" alt="QR Code للاتصال" id="qr-code-img" onerror="this.style.display='none'">
+                        <h3>أو امسح الرمز للتواصل السريع عبر واتساب</h3>
+                        <img src="https://i.ibb.co/hXYqC97/whatsapp-qr-code.png" alt="QR Code للاتصال عبر واتساب" id="qr-code-img">
                     </div>
                 </div>
             </div>
@@ -308,15 +318,18 @@
     <footer>
         <div class="container">
             <div class="social-links">
-                <a href="https://web.facebook.com/p/أ%D9%85%D9%8A%D8%B1-%D8%A7%D9%84%D8%B4%D8%B1%D9%88%D9%82-61559518204192/" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-                </div>
+                <a href="https://web.facebook.com/p/أ%D9%85%D9%8A%D8%B1-%D8%A7%D9%84%D8%B4%D8%B1%D9%88%D9%82-61559518204192/" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/amirchourouk36/" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                <a href="https://t.me/amirchourouk" target="_blank" rel="noopener noreferrer" aria-label="Telegram"><i class="fab fa-telegram"></i></a>
+                <a href="https://wa.me/213781465477" target="_blank" rel="noopener noreferrer" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+            </div>
             <p>&copy; <span id="year"></span> أمير الشروق. تصميم وتطوير بحب ❤️.</p>
         </div>
     </footer>
 
     <div id="qr-modal" class="modal">
         <span class="modal-close" id="modal-close">&times;</span>
-        <img class="modal-content" id="modal-img">
+        <img class="modal-content" id="modal-img" alt="صورة مكبرة لرمز QR">
     </div>
 
     <script>
@@ -354,17 +367,18 @@
         hamburger.addEventListener('click', () => navMenu.classList.toggle('active'));
         document.querySelectorAll('.nav-link').forEach(link => link.addEventListener('click', () => navMenu.classList.remove('active')));
 
-        // --- إنشاء بطاقات المنتجات ---
+        // --- إنشاء بطاقات المنتجات (مع صور محسنة) ---
         const products = [
-             { name: 'جافيل 5 لتر', superGros: '125.00 د.ج', gros: '135.00 د.ج', image: 'placeholder.jpg' },
-             { name: 'جافيل 2 لتر', superGros: '75.00 د.ج', gros: '85.00 د.ج', image: 'placeholder.jpg' },
-             { name: 'جافيل 1 لتر', superGros: '35.00 د.ج', gros: '42.00 د.ج', image: 'placeholder.jpg' },
-             { name: 'صانيبون 5 لتر', superGros: '155.00 د.ج', gros: '165.00 د.ج', image: 'placeholder.jpg' },
-             { name: 'صانيبون 1 لتر', superGros: '75.00 د.ج', gros: '85.00 د.ج', image: 'placeholder.jpg' },
-             { name: 'منظف الأرضيات 1 لتر', superGros: '85.50 د.ج', gros: '95.00 د.ج', image: 'placeholder.jpg' },
-             { name: 'سائل الأواني 5 لتر', superGros: '290.00 د.ج', gros: '310.00 د.ج', image: 'placeholder.jpg' },
-             { name: 'سائل الأواني 1 لتر', superGros: '90.00 د.ج', gros: '105.00 د.ج', image: 'placeholder.jpg' },
-             { name: 'سائل الأواني 450 مل', superGros: '57.00 د.ج', gros: '65.00 د.ج', image: 'placeholder.jpg' }
+            // ملاحظة: هذه الصور هي نماذج فقط. الرجاء استبدالها بصور منتجاتك الحقيقية.
+            { name: 'جافيل 5 لتر', superGros: '125.00 د.ج', gros: '135.00 د.ج', image: 'PIC/JAVAIL 1 L.jpg' },
+            { name: 'جافيل 2 لتر', superGros: '75.00 د.ج', gros: '85.00 د.ج', image: '' },
+            { name: 'جافيل 1 لتر', superGros: '35.00 د.ج', gros: '42.00 د.ج', image: 'PIC/JAVAIL 5L.jpg' },
+            { name: 'صانيبون 5 لتر', superGros: '155.00 د.ج', gros: '165.00 د.ج', image: 'PIC/SANIBON 5 L.jpg' },
+            { name: 'صانيبون 1 لتر', superGros: '75.00 د.ج', gros: '85.00 د.ج', image: 'PIC/SANIBON 1L.jpg' },
+            { name: 'منظف الأرضيات 1 لتر', superGros: '85.50 د.ج', gros: '95.00 د.ج', image: 'PIC/LAVESOLE 1L.jpg' },
+            { name: 'سائل الأواني 5 لتر', superGros: '290.00 د.ج', gros: '310.00 د.ج', image: '' },
+            { name: 'سائل الأواني 1 لتر', superGros: '90.00 د.ج', gros: '105.00 د.ج', image: 'https://i.ibb.co/n6z4V9d/liquide-vaisselle-1l.png' },
+            { name: 'سائل الأواني 450 مل', superGros: '57.00 د.ج', gros: '65.00 د.ج', image: 'https://i.ibb.co/zZfQJ8T/liquide-vaisselle-450ml.png' }
         ];
         const whatsappNumber = '213781465477';
         const productsContainer = document.getElementById('products-container');
@@ -387,7 +401,7 @@
                         <p>شبه جملة: <span class="price-gros">${product.gros}</span></p>
                     </div>
                     <div class="product-actions">
-                        <a href="${whatsappLink}" target="_blank" class="action-btn">
+                        <a href="${whatsappLink}" target="_blank" rel="noopener noreferrer" class="action-btn">
                             <i class="fab fa-whatsapp"></i> اطلب الآن
                         </a>
                     </div>
@@ -412,8 +426,6 @@
         const sections = document.querySelectorAll('section');
         const navLinks = document.querySelectorAll('.nav-link');
         const revealElements = document.querySelectorAll('.reveal');
-
-        const observerOptions = { root: null, rootMargin: '0px', threshold: 0.15 };
 
         const sectionObserver = new IntersectionObserver((entries, observer) => {
             entries.forEach(entry => {
