--- a/سورة الكهف مكتوبة.html
+++ b/سورة الكهف مكتوبة.html
@@ -245,9 +245,7 @@
 
     <header class="progress-header">
         <div class="progress-info">
-       <h1>سورة الكهف</h1>
-		<h1>القرآن الكريم  رواية حفص عن عاصم سورة الكهف مكتوبة بالرسم العثماني
-		</h1>            <span class="progress-percent" id="progressPercent">0%</span>
+             <span class="progress-percent" id="progressPercent">0%</span>
         </div>
         <div class="progress-container">
             <div class="progress-bar" id="progressBar"></div>
