--- a/index.html
+++ b/index.html
@@ -3,6 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+<meta name="description" content="أمير الشروق | امير الشروق | أمير الشرق | امير الشرق | أمير شروق | امير شروق | Amir El Chourouk | Amir Al Chourouk | Amir Chourouk | Amir Eshorouk | Amir Shorouk | Amiralchourouk | Ameer El Chourouk | Ameer Al Chourouk | Amir Chorouk | Amir Chourouq | Amir Shurouq | Amir du Chourouk | Amir de Chourouk | Amir Nettoyage | Amir nettoyage Algérie | Maison Amir Chourouk | Entreprise Amir Chourouk | Amīr Eshorouk | Amir al-Shorouq | مواد تنظيف بالجملة والتجزئة | منتجات تنظيف فاخرة | منظفات للمنزل | منظفات صناعية | مواد نظافة صحية | منتجات تنظيف للمدارس | تنظيف الزجاج | تنظيف الأثاث | أفضل منظفات في الجزائر | cleaning supplies | hygiene products | household cleaning | commercial cleaning | nettoyage en gros | produits d’hygiène | produits de nettoyage professionnel | désinfectants | savons liquides | détergents | livraison à domicile | prix de gros | جودة عالية | أسعار تنافسية | توزيع مواد تنظيف | شركات التنظيف | بيع بالجملة | منظفات مطاعم | منتجات تعقيم | منظفات بيئية | منظفات صديقة للبيئة | eco cleaning products | Algerie | Blida | أمير الشروق تنظف حياتك | منتجات تنظيف راقية | منتجات تنظيف اقتصادية | بيع مواد التنظيف في الجزائر | nettoyage écologique | meilleur prix | fast delivery | مواد تنظيف للمؤسسات | منظفات حمامات | منظفات أرضيات | معطرات الجو | معقمات | شحن سريع | تنظيف فعال | مواد تنظيف آمنة | شركات بيع مواد التنظيف | Online store for cleaning products in Algeria | Boutique de produits de nettoyage | مواد تنظيف بالجملة أونلاين | متجر مواد التنظيف | منتجات تنظيف بالبليدة.">
+<meta name="keywords" content="مواد تنظيف, تنظيف فاخر, أمير الشروق, مواد التنظيف بالجملة, منظفات الجزائر">
+
+<meta name="keywords" content="أمير الشروق, امير الشروق, أمير الشرق, Amir El Chourouk, Amir Al Chourouk, Amiralchourouk, Amir Chourouk, Amir Eshorouk, Amir Shorouk, Ameer Al Chourouk, Amir du Chourouk, Amir Nettoyage, شركة أمير الشروق, مؤسسة أمير الشروق, متجر أمير الشروق, مواد تنظيف, منتجات تنظيف, منظفات, تنظيف فاخر, مواد تنظيف بالجملة, تنظيف بالجملة, منظفات بالجملة, بيع مواد تنظيف, متجر منظفات, hygiene products, cleaning supplies, eco-friendly cleaning, produits de nettoyage, produits d’hygiène, nettoyage professionnel, nettoyage maison, détergents, désinfectants, savons liquides, produits sanitaires, تنظيف المنازل, تنظيف صناعي, مواد تنظيف مدارس, منظفات مطاعم, أدوات تنظيف, مواد تعقيم, شحن سريع, توزيع مواد تنظيف, شركات التنظيف, مواد تنظيف في الجزائر, Blida, الجزائر, Algeria, متجر مواد تنظيف الجزائر, boutique produits nettoyage Algérie, meilleur prix nettoyage, مواد تنظيف راقية, مواد تنظيف اقتصادية, online cleaning store Algeria">
+
+
+
+<!-- وصف SEO -->
+<meta name="description" content="أمير الشروق | مواد تنظيف فاخرة بالجملة والتجزئة في الجزائر. أفضل المنتجات بأعلى جودة وأسعار تنافسية. توصيل سريع وخدمة ممتازة.">
+
+<!-- Open Graph -->
+<meta property="og:title" content="أمير الشروق - مواد تنظيف فاخرة في الجزائر">
+<meta property="og:description" content="أمير الشروق يقدم أفضل مواد التنظيف الفاخرة بأسعار مناسبة وخدمة توصيل سريعة في الجزائر. اكتشف مجموعتنا الآن!">
+<meta property="og:image" content="https://i.imgur.com/qY2pReh.jpg">
+<meta property="og:url" content="https://s22market.github.io/AMIR_ALSHURUK/">
+<meta property="og:type" content="website">
+<meta property="og:locale" content="ar_DZ">
+<meta property="og:site_name" content="أمير الشروق">
+
+
+
+
+
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Amiralchourouk | أمير الشروق لمواد التنظيف بالجملة والتجزئة">
+<meta name="twitter:description" content="مواد تنظيف فاخرة بأسعار منافسة وجودة عالية. بيع بالجملة والتجزئة في الجزائر. Amir El Chourouk - Nettoyage Algérie - livraison rapide.">
+<meta name="twitter:image" content="https://amiralchourouk.com/PIC/LOGO.jpg">
+<meta name="twitter:site" content="@AmirChourouk"> <!-- غيّره إذا عندك حساب تويتر -->
+
     <title>أمير الشروق - لمواد التنظيف الفاخرة</title>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -1533,3 +1565,20 @@ document.addEventListener('DOMContentLoaded', function() {
 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
